--- a/index.html
+++ b/index.html
@@ -101,17 +101,17 @@ header1{display: flex; width:100%;}
 </section>
 
 <section id="section2">
-<center><font size="4"><b>App 24 WASticker</b></font><br> 
-<font size="2" color="green"><b>Pagatinas divertidas.</b></font>
+<center><font size="4"><b>TRON VIP GRUPO </b></font><br> 
+<font size="2" color="green"><b>  Las personas interesadas son bienvenidas </b></font>
 <br> <font size="2">Verificado por <b>Virus Total</b></font><br><br>
-<font size="2"><b>Versión:  1.0(4)<br>
-Tamaño:  17.04 MB</b></font></center>
+<font size="2"><b>Versión:  9.8(2)<br>
+Tamaño:  19.47 MB</b></font></center>
 </section>
   
 </div>
   
 <div class="nav"> 
-<a href="App 24 WASticker_Android-life.apk    "  download="App 24 WASticker_Android-life " ><center>Descargar</center></a>
+<a href="   TRON VIP GRUPO_Android-life.apk   "  Download=" TRON VIP GRUPO_Android-life "><center>Descargar</center></a>
 </div>
   
 
@@ -127,26 +127,20 @@ Tamaño:  17.04 MB</b></font></center>
   
 <div class="main">
 <section id="section6">
-<img src="2.png" >
+<img src="2.jpg" >
 </section>
 <section id="section6">
-<img src="3.png"  >
+<img src="3.jpg"  >
 </section>
 <section id="section6">
-<img src="4.png" >
-</section>
-<section id="section6">
-<img src="5.png" >
+<img src="4.jpg" >
 </section>
 </div>
 
 <div class="footer">
 <p><pre>
-<h2>  Descripción:</h2></pre><br><p>Pegatinas divertidas para animar tus chats. Exprésate con creatividad.<br><br>
-
-\"Descubre una nueva forma de expresarte con App 24 WASticker, una increíble aplicación.<br><br>
-creado en App Creator 24<br><br>
-<b>Datos del desarrollador
+<h2>  Descripción:</h2></pre><br><p>Lo ayudamos a asesorarlo y guiarlo a través de un próspero viaje de inversión. 
+  Las personas interesadas son bienvenidas.  
 </p>
 </div>
   
@@ -164,7 +158,7 @@ creado en App Creator 24<br><br>
 </div>
 </div>
 <div class="nombre1">
-Jhh Company
+Joel
 </div>
 </header1>
 
@@ -175,31 +169,20 @@ Jhh Company
 </div>
 </div>
 <div class="nombre1">
-farezhuamani@gmail.com
+Vjoel2742@gmail.com
 </div>
 </header1>
 
 <header1>
 <div class="logo1">
 <div class="log1">
-<a href=" http://www.e-droid.net/privacy.php?ida=2525313&idl=es "><img src="privacidad.png " ></a>
+<a href="http://www.e-droid.net/privacy.php?ida=2697170&idl=en"><img src="privacidad.png " ></a>
 </div>
 </div>
 <div class="nombre1">
 Politica de privacidad 
 </div>
 </header1>
-
-<header1>
-<div class="logo1">
-<div class="log1">
-<a href="https://play.google.com/store/apps/details?id=app.creator.wasticker"><img src="play.jpg " ></a>
-</div>
-</div>
-<div class="nombre1">
-Google Play ID 
-</div>
-</header1> 
 
   
 <div id="comentarios"></div>
