--- a/index.html
+++ b/index.html
@@ -114,7 +114,8 @@ Tamaño:  19.47 MB</b></font></center>
 <a href="   TRON VIP GRUPO_Android-life.apk   "  Download=" TRON VIP GRUPO_Android-life "><center>Descargar</center></a>
 </div>
   
-
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v17.0" nonce="JVMhTVt0"></script>
   
 <section id="section03">
 <div id="section08">
@@ -186,7 +187,7 @@ Politica de privacidad
 
   
 <div id="comentarios"></div>
-
+<div class="fb-comments" data-href="https://developer-shop.github.io/TRON-VIP-GRUPO/" data-width="100" data-numposts="5"></div>
   
  <script type="text/javascript">(function(d, t, e, m){
     
